@@ -18,6 +18,17 @@ begin_import
 import|import
 name|java
 operator|.
+name|lang
+operator|.
+name|ref
+operator|.
+name|WeakReference
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Collections
@@ -56,7 +67,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|IdentityHashMap
+name|WeakHashMap
 import|;
 end_import
 begin_import
@@ -162,7 +173,7 @@ DECL|field|attClassImplMap
 specifier|private
 specifier|static
 specifier|final
-name|IdentityHashMap
+name|WeakHashMap
 argument_list|<
 name|Class
 argument_list|<
@@ -171,17 +182,20 @@ extends|extends
 name|Attribute
 argument_list|>
 argument_list|,
+name|WeakReference
+argument_list|<
 name|Class
 argument_list|<
 name|?
 extends|extends
 name|AttributeImpl
+argument_list|>
 argument_list|>
 argument_list|>
 name|attClassImplMap
 init|=
 operator|new
-name|IdentityHashMap
+name|WeakHashMap
 argument_list|<
 name|Class
 argument_list|<
@@ -190,11 +204,14 @@ extends|extends
 name|Attribute
 argument_list|>
 argument_list|,
+name|WeakReference
+argument_list|<
 name|Class
 argument_list|<
 name|?
 extends|extends
 name|AttributeImpl
+argument_list|>
 argument_list|>
 argument_list|>
 argument_list|()
@@ -296,6 +313,25 @@ init|(
 name|attClassImplMap
 init|)
 block|{
+specifier|final
+name|WeakReference
+argument_list|<
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|AttributeImpl
+argument_list|>
+argument_list|>
+name|ref
+init|=
+name|attClassImplMap
+operator|.
+name|get
+argument_list|(
+name|attClass
+argument_list|)
+decl_stmt|;
 name|Class
 argument_list|<
 name|?
@@ -304,12 +340,18 @@ name|AttributeImpl
 argument_list|>
 name|clazz
 init|=
-name|attClassImplMap
+operator|(
+name|ref
+operator|==
+literal|null
+operator|)
+condition|?
+literal|null
+else|:
+name|ref
 operator|.
 name|get
-argument_list|(
-name|attClass
-argument_list|)
+argument_list|()
 decl_stmt|;
 if|if
 condition|(
@@ -326,6 +368,17 @@ name|put
 argument_list|(
 name|attClass
 argument_list|,
+operator|new
+name|WeakReference
+argument_list|<
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|AttributeImpl
+argument_list|>
+argument_list|>
+argument_list|(
 name|clazz
 operator|=
 name|Class
@@ -352,6 +405,7 @@ argument_list|(
 name|AttributeImpl
 operator|.
 name|class
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -707,7 +761,7 @@ DECL|field|knownImplClasses
 specifier|private
 specifier|static
 specifier|final
-name|IdentityHashMap
+name|WeakHashMap
 argument_list|<
 name|Class
 argument_list|<
@@ -718,18 +772,21 @@ argument_list|>
 argument_list|,
 name|LinkedList
 argument_list|<
+name|WeakReference
+argument_list|<
 name|Class
 argument_list|<
 name|?
 extends|extends
 name|Attribute
+argument_list|>
 argument_list|>
 argument_list|>
 argument_list|>
 name|knownImplClasses
 init|=
 operator|new
-name|IdentityHashMap
+name|WeakHashMap
 argument_list|<
 name|Class
 argument_list|<
@@ -740,11 +797,14 @@ argument_list|>
 argument_list|,
 name|LinkedList
 argument_list|<
+name|WeakReference
+argument_list|<
 name|Class
 argument_list|<
 name|?
 extends|extends
 name|Attribute
+argument_list|>
 argument_list|>
 argument_list|>
 argument_list|>
@@ -787,11 +847,14 @@ condition|)
 return|return;
 name|LinkedList
 argument_list|<
+name|WeakReference
+argument_list|<
 name|Class
 argument_list|<
 name|?
 extends|extends
 name|Attribute
+argument_list|>
 argument_list|>
 argument_list|>
 name|foundInterfaces
@@ -817,6 +880,8 @@ operator|==
 literal|null
 condition|)
 block|{
+comment|// we have a strong reference to the class instance holding all interfaces in the list (parameter "att"),
+comment|// so all WeakReferences are never evicted by GC
 name|knownImplClasses
 operator|.
 name|put
@@ -828,11 +893,14 @@ operator|=
 operator|new
 name|LinkedList
 argument_list|<
+name|WeakReference
+argument_list|<
 name|Class
 argument_list|<
 name|?
 extends|extends
 name|Attribute
+argument_list|>
 argument_list|>
 argument_list|>
 argument_list|()
@@ -886,6 +954,17 @@ name|foundInterfaces
 operator|.
 name|add
 argument_list|(
+operator|new
+name|WeakReference
+argument_list|<
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|Attribute
+argument_list|>
+argument_list|>
+argument_list|(
 name|curInterface
 operator|.
 name|asSubclass
@@ -893,6 +972,7 @@ argument_list|(
 name|Attribute
 operator|.
 name|class
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -918,6 +998,21 @@ block|}
 comment|// add all interfaces of this AttributeImpl to the maps
 for|for
 control|(
+name|WeakReference
+argument_list|<
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|Attribute
+argument_list|>
+argument_list|>
+name|curInterfaceRef
+range|:
+name|foundInterfaces
+control|)
+block|{
+specifier|final
 name|Class
 argument_list|<
 name|?
@@ -925,10 +1020,21 @@ extends|extends
 name|Attribute
 argument_list|>
 name|curInterface
-range|:
-name|foundInterfaces
-control|)
-block|{
+init|=
+name|curInterfaceRef
+operator|.
+name|get
+argument_list|()
+decl_stmt|;
+assert|assert
+operator|(
+name|curInterface
+operator|!=
+literal|null
+operator|)
+operator|:
+literal|"We have a strong reference on the class holding the interfaces, so they should never get evicted"
+assert|;
 comment|// Attribute is a superclass of this interface
 if|if
 condition|(
